[package]
name = "pux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21", default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
hyper = { version = "0.14", default-features = false, features = ["server", "client", "http1", "http2"] }
tokio-rustls = { version = "0.23", default-features = false, features = ["tls12"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing-subscriber = "0.3"
rustls-pemfile = "1.0"
webpki-roots = "0.22"
async-trait = "0.1"
pin-project = "1.0"
serde_yaml = "0.9"
once_cell = "1.15"
tracing = "0.1"
mime = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
